--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -9,6 +9,18 @@
   </head>
   <body>
     <h1>Global Pokedex</h1>
+    <h2>Select what Gen do you want to see</h2>
+    <div class="buttons">
+      <button onclick="genAll()" class="btn">All</button>
+      <button onclick="gen1()" class="btn">1º Gen</button>
+      <button onclick="gen2()" class="btn">2º Gen</button>
+      <button onclick="gen3()" class="btn">3ª Gen</button>
+      <button onclick="gen4()" class="btn">4º Gen</button>
+      <button onclick="gen5()" class="btn">5º Gen</button>
+      <button onclick="gen6()" class="btn">6º Gen</button>
+      <button onclick="gen7()" class="btn">7º Gen</button>
+      <button onclick="gen8()" class="btn">8º Gen</button>
+    </div>
     <div class="poke-container" id="poke-container"></div>
 
     <script src="script.js"></script>
